fixed text overflow issue when window size changes. also added image

--- a/mywebsite/staticfiles/css_files/main.css
+++ b/mywebsite/staticfiles/css_files/main.css
@@ -1,18 +1,20 @@
-.container {
-	border: 2px black solid;
-	min-height: 470px;
-	min-width: 800px;
-	padding:  3px;
+.container {	
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
+	width: 100vw;
 
+	font-family: monospace; 
 	font-size: 15px;
 }
 
-/*#wholepage {
-	width: 800px;
-	font-family: monospace; 
-	font-size: 15px;
-	margin:  auto;
-}*/
+.content_square {
+	border: 2px black solid;
+	height: 500px;
+	width: 750px;
+}
 
 .heading {
 	text-align: center;	
@@ -21,17 +23,28 @@
 	font-style: italic;
 }
 
+.self_portrait {
+	width: 250px;
+	margin-left: 5px;
+	margin-top: 5px;
+}
+
 .left-col {
-	width: 40%;
+	width: 300px;
 	float: left;
-	padding: 1px;		
+	padding: 1px;	
+
+	resize: none;	
 }
 
 .center-col, .right-col {
-	width: 25%;
+	width: 187.5px;
 	float: left;
 	padding: 1px;	
 	line-height: 175%;
+
+	resize: none;
+	text-overflow: ;
 }
 
 .links {
@@ -53,5 +66,8 @@
 }
 
 .footer {
-	/*font-family: monospace;*/
+	position: absolute;
+	top: 660px;
+
+	font-family: monospace;
 }
